--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 
 [dependencies]
 bluer = { version = "0.17.1", features = ["full", "id"] }
+clap = { version = "4.5.4", features = ["derive"] }
+dirs = "5.0.1"
 env_logger = "0.11.3"
 figment = { version = "0.10.18", features = ["yaml"] }
 futures = "0.3.30"
 mac_address = { version = "1.1.6", features = ["serde"] }
 serde = { version = "1.0.199", features = ["derive"] }
+serde_yaml = "0.9.34"
 tokio = { version = "1.37.0", features = ["full"] }
